--- a/Week12/todo-front/src/app/tasks-lists-detail/tasks-lists-detail.component.html
+++ b/Week12/todo-front/src/app/tasks-lists-detail/tasks-lists-detail.component.html
@@ -19,7 +19,7 @@
               <button type="button" class="btn btn-warning btn-sm" (click)="updateTasksLists(taskList)">Update</button>
             </li>
             <li class="list-group-item">
-              <button type="button" class="btn btn-danger btn-sm" (click)="deleteTaskList()" style="margin-left: 5px;">Delete</button>
+              <button type="button" class="btn btn-danger btn-sm" (click)="deleteTaskList()">Delete</button>
             </li>
           </ul>
         </li>
