--- a/Week12/todo-front/src/app/tasks-detail/tasks-detail.component.html
+++ b/Week12/todo-front/src/app/tasks-detail/tasks-detail.component.html
@@ -28,7 +28,7 @@
               <button type="button" class="btn btn-warning btn-sm" (click)="updateTask(task)">Update</button>
             </li>
             <li class="list-group-item">
-              <button type="button" class="btn btn-danger btn-sm" (click)="deleteTask(task)" style="margin-left: 5px;">Delete</button>
+              <button type="button" class="btn btn-danger btn-sm" (click)="deleteTask(task)">Delete</button>
             </li>
           </ul>
         </li>
