--- a/Week12/todo-front/src/app/tasks-lists/tasks-lists.component.html
+++ b/Week12/todo-front/src/app/tasks-lists/tasks-lists.component.html
@@ -4,11 +4,11 @@
       <li class="list-group-item">
         <ul class="list-group list-group-horizontal">
           <li class="list-group-item">
-            <label for="list_name" style="margin-right:5px;">Name</label>
+            <label for="list_name">Name</label>
             <input type="text" class="form-control" [(ngModel)]="name" placeholder="Create new task list">
           </li>
           <li class="list-group-item">
-            <button type="submit" class="btn btn-info" (click)="createTaskList()" style="margin-bottom:5px;">Create</button>
+            <button type="submit" class="btn btn-info" (click)="createTaskList()">Create</button>
           </li>
         </ul>
       </li>
