--- a/Week13/todo-front/src/app/tasks-lists-detail/tasks-lists-detail.component.html
+++ b/Week13/todo-front/src/app/tasks-lists-detail/tasks-lists-detail.component.html
@@ -16,10 +16,10 @@
               <input type="text" class="form-control" [(ngModel)]="taskList.name">
             </li>
             <li class="list-group-item">
-              <button type="button" class="btn btn-warning btn-sm" (click)="updateTask(task)">Update</button>
+              <button type="button" class="btn btn-warning btn-sm" (click)="updateTasksLists(taskList)">Update</button>
             </li>
             <li class="list-group-item">
-              <button type="button" class="btn btn-danger btn-sm" (click)="deleteTask(task)" style="margin-left: 5px;">Delete</button>
+              <button type="button" class="btn btn-danger btn-sm" (click)="deleteTaskList()">Delete</button>
             </li>
           </ul>
         </li>
