--- a/Week13/todo-front/src/app/tasks-lists/tasks-lists.component.html
+++ b/Week13/todo-front/src/app/tasks-lists/tasks-lists.component.html
@@ -1,27 +1,53 @@
-<!-- <app-base></app-base> -->
 <ng-container>
-  <div class="form" *ngIf="!logged">
-    <div>Create new TaskList</div>
-    <span><input type="text"class="form-control" [(ngModel)]="username"></span>
-    <span><input type="text"class="form-control" [(ngModel)]="password"></span>
-    <button class="btn btn-primary" type="submit" (click)="login()">Login</button>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav" *ngIf="!logged">
+        <a class="nav-item nav-link">Login or Register</a>
+      </div>
+      <div class="navbar-nav" *ngIf="logged">
+        <a class="nav-item nav-link" (click)="logout()">Logout</a>
+      </div>
+    </div>
+  </nav>
+  <div class="row">
+    <div class="column">
+      <div class="loginForm">
+        <div class="form" *ngIf="!logged">
+          <label for="username">Username:</label>
+          <span><input type="text"class="form-control" [(ngModel)]="username" /></span>
+          <label for="password">Password:</label>
+          <span><input type="password"class="form-control" [(ngModel)]="password" /></span>
+          <button class="btn btn-info" type="submit" (click)="login()">Login</button>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="registerForm">
+        <div class="form" *ngIf="!logged">
+          <label for="username">Username:</label>
+          <span><input type="text"class="form-control" [(ngModel)]="newUsername" /></span>
+          <label for="password">Password:</label>
+          <span><input type="password"class="form-control" [(ngModel)]="newPassword" /></span>
+          <button class="btn btn-info" type="submit" (click)="register()">Register</button>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="container" *ngIf='logged'>
-    <button class="btn btn-primary" type="submit" (click)="logout()">LogOut</button>
     <div class="new_list">
       <li class="list-group-item">
         <ul class="list-group list-group-horizontal">
           <li class="list-group-item">
-            <label for="list_name" style="margin-right:5px;">Name</label>
+            <label for="list_name">Name</label>
             <input type="text" class="form-control" [(ngModel)]="name" placeholder="Create new task list">
           </li>
           <li class="list-group-item">
-            <button type="submit" class="btn btn-info" (click)="createTaskList()" style="margin-bottom:5px;">Create</button>
+            <button type="submit" class="btn btn-info" (click)="createTaskList()">Create</button>
           </li>
         </ul>
       </li>
     </div>
-    <li class="list-group-item" *ngFor = "let taskList of tasksLists">
+    <li class="list-group-item" *ngFor="let taskList of tasksLists">
       <ul class="list-group list-group-horizontal">
         <li class="list-group-item">{{taskList.id}}</li>
         <li class="list-group-item">{{taskList.name}}</li>
